--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+
+    <!-- Theme color -->
+    <color name="status_bar_color">#969696</color>
+    <color name="primary_color">#FFFFFF</color>
+    <color name="primary_variant_color">#62AEDF</color>
+    <color name="secondary_color">#3CC695</color>
+
+    <color name="surface_color">#FFFFFF</color>
+
+
 </resources>
