--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,10 @@
     <color name="primary_variant_color">#62AEDF</color>
     <color name="secondary_color">#3CC695</color>
 
-    <color name="surface_color">#FFFFFF</color>
+    <color name="white_color">#FFFFFF</color>
+    <color name="light_grey_color">#E5E5E5</color>
+
+    <color name="text_color"></color>
 
 
 </resources>
