--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_small">8dp</dimen>
 
+    <dimen name="space_medium">16dp</dimen>
     <dimen name="app_icon_height">100dp</dimen>
     <dimen name="app_icon_width">100dp</dimen>
 
