--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,10 +20,10 @@
         android:name="com.teaml.kidsphonelimit.ui.lock.LockFragment"
         android:label="home_fragment"
         tools:layout="@layout/lock_fragment" >
-        <action
+        <!--<action
             android:id="@+id/action_lockFragment_to_homeFragment"
             app:destination="@id/homeFragment"
-            app:popUpTo="@id/homeFragment" />
+            app:popUpTo="@id/homeFragment" />-->
     </fragment>
 
     <fragment
