--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="503.8564"
+    android:viewportHeight="503.8564">
+  <group android:translateX="177.0692"
+      android:translateY="153.67621">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M131,65.5h-9.357L121.643,46.787a46.787,46.787 0,0 0,-93.574 0L28.069,65.5L18.715,65.5A18.77,18.77 0,0 0,-0 84.216L-0,177.79A18.77,18.77 0,0 0,18.715 196.5L131,196.5a18.77,18.77 0,0 0,18.715 -18.715L149.715,84.216A18.77,18.77 0,0 0,131 65.5ZM103.864,65.5L45.851,65.5L45.851,46.787a29.008,29.008 0,0 1,58.016 0Z"
+        android:fillColor="#fff"/>
+    <path
+        android:pathData="M86.453,89.918L63.266,89.918L63.266,97.647L86.453,97.647ZM70.995,140.155h7.729L78.724,116.969L70.995,116.969ZM102.026,114.611l5.487,-5.487a42.7,42.7 0,0 0,-5.449 -5.449L96.58,109.163a34.777,34.777 0,1 0,5.449 5.449ZM74.86,163.341A27.051,27.051 0,1 1,101.91 136.291,27.031 27.031,0 0,1 74.86,163.341Z"
+        android:fillColor="#62aedf"/>
+    <path
+        android:pathData="M71.252,140.236h23.99s0.241,-12.323 -6.893,-18.464S71.252,116.128 71.252,116.128Z"
+        android:fillColor="#62aedf"/>
+  </group>
 </vector>
