--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -15,12 +15,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title=" " />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icon_img"
         android:layout_width="@dimen/app_icon_width"
         android:layout_height="@dimen/app_icon_height"
         android:layout_marginTop="@dimen/margin_xlarge"
-        android:background="@android:color/darker_gray"
+        app:shapeAppearanceOverlay="@style/Widget.CircleImageView"
+        app:srcCompat="@mipmap/ic_launcher_round"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
