--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -40,28 +40,31 @@
         app:layout_constraintStart_toStartOf="@+id/star_vertical_guideline"
         app:layout_constraintTop_toBottomOf="@+id/title_tv" />
 
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/minute_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_medium"
+        android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
         android:text="@string/minutes"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         app:layout_constraintBottom_toTopOf="@+id/minute_picker"
         app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/star_vertical_guideline" />
-
+        app:layout_constraintStart_toStartOf="@+id/star_vertical_guideline"
+        app:layout_constraintTop_toTopOf="@+id/top_horizontal_guideline"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <com.shawnlin.numberpicker.NumberPicker
         android:id="@+id/minute_picker"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline"
+        android:layout_height="@dimen/number_picker_height"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_horizontal_guideline"
         app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/star_vertical_guideline"
-        app:layout_constraintBottom_toTopOf="@id/bottom_horizontal_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/minute_tv"
         app:np_dividerThickness="0dp"
         app:np_max="59"
         app:np_min="1"
@@ -75,19 +78,19 @@
         android:id="@+id/timer_progress"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:progressBackgroundColor="?attr/colorSecondary"
-        app:progressColor="?attr/colorSecondaryVariant"
+        android:visibility="gone"
         app:backgroundColor="?attr/colorSurface"
         app:backgroundWidth="8"
         app:isClockwise="false"
-        app:textSize="34sp"
-        app:startingPoint="top"
-        app:progressTextColor="?attr/colorOnSurface"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline"
+        app:layout_constraintBottom_toTopOf="@id/bottom_horizontal_guideline"
         app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
         app:layout_constraintStart_toStartOf="@+id/star_vertical_guideline"
-        app:layout_constraintBottom_toTopOf="@id/bottom_horizontal_guideline" />
+        app:layout_constraintTop_toBottomOf="@id/top_horizontal_guideline"
+        app:progressBackgroundColor="?attr/colorSecondary"
+        app:progressColor="?attr/colorSecondaryVariant"
+        app:progressTextColor="?attr/colorOnSurface"
+        app:startingPoint="top"
+        app:textSize="34sp" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/minute_picker_layout"
@@ -102,8 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_medium"
         android:layout_marginEnd="@dimen/margin_medium"
-        android:text="@string/start_timer"
         android:tag="start"
+        android:text="@string/start_timer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"
         app:layout_constraintHorizontal_bias="0.0"
@@ -138,6 +141,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.7" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="531dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
