--- a/app/src/main/res/layout/lock_fragment.xml
+++ b/app/src/main/res/layout/lock_fragment.xml
@@ -8,11 +8,11 @@
 
 
     <ImageView
-        android:id="@+id/lock_text"
+        android:id="@+id/lock_img"
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         android:src="@drawable/time_up_img2"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
         app:layout_constraintEnd_toStartOf="@+id/star_vertical_guideline"
         app:layout_constraintStart_toStartOf="@+id/end_vertical_guideline"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,13 +28,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lock_text" />
+        app:layout_constraintTop_toBottomOf="@+id/lock_img" />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_marginBottom="@dimen/margin_medium"
+        android:gravity="center_horizontal"
         android:text="@string/long_press_on_open_lock_icon_for_5_second_to_unlock_phone"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
         app:layout_constraintBottom_toTopOf="@+id/unlock_img"
@@ -45,10 +45,10 @@
         android:id="@+id/unlock_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:contentDescription="@null"
         android:focusable="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="@dimen/space_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,5 +71,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_end="@dimen/margin_medium" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.41" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
