--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <item name="wrap_content" format="integer" type="dimen">-2</item>
+
     <dimen name="margin_xlarge">64dp</dimen>
     <dimen name="margin_large">32dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
@@ -8,5 +11,6 @@
     <dimen name="space_medium">16dp</dimen>
     <dimen name="app_icon_height">80dp</dimen>
     <dimen name="app_icon_width">80dp</dimen>
+    <dimen name="number_picker_height">0dp</dimen>
 
 </resources>
